[package]
name = "alice-auth-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.alice-auth]
path = ".."
features = ["std"]

[[bin]]
name = "fuzz_verify"
path = "fuzz_targets/fuzz_verify.rs"
doc = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
doc = false

[[bin]]
name = "fuzz_protocol"
path = "fuzz_targets/fuzz_protocol.rs"
doc = false

[workspace]
members = ["."]
